shellScript/newsum/deploy-newssum.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsum
  namespace: site
spec:
  replicas: 3
  selector:
    matchLabels:
      app: news-deploy 
  template:
    metadata:
      labels:
        app: news-deploy
    spec:
      containers:
      - name: news-deploy
        image: bbin99/newsum:lates
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        resorces:
          limits:
            cpu: "500m"
          requests:
            cpu: "200m"
