shellScript/newsum/temp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: news-deploy
  name: news-deploy
  namespace: site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: news-deploy
    spec:
      containers:
      - image: younsu0117/my-node-web:v1
        name: my-node-web
        resources: {}
status: {}
