shellScript/newsum/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-deploy
  namespace: site
  labels:
    app: news-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-deploy
  template:
    metadata:
      labels:
        app: news-deploy
    spec:
      containers:
      - name: news-deploy
        image: younsu0117/my-node-web:v1
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: news-deploy
  namespace: site
spec:
  type: NodePort
  selector:
    app: news-deploy
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30080
