shellScript/newsum/node.js-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node.js-ingress
  namespace: site
  annotations:
    kubernetes.io/ingress.class: "nginx"  # 사용 중인 Ingress 컨트롤러에 맞게 설정
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # HTTP를 HTTPS로 리다이렉션
spec:
  tls:
  - hosts:
    - newsum.click  # 실제 도메인으로 변경하세요
    secretName: node.js-tls-secret
  rules:
  - host: newsum.click  # 실제 도메인으로 변경하세요
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: news-deploy  # 웹 애플리케이션 서비스 이름
            port:
              number: 80
